[package]
name = "rot13-rs"
description = "Tiny idiomatic Rust ROT13 implementation"
authors = ["fawn <fawn@envs.net>"]
version = "0.1.1"
edition = "2021"
license = "ISC"
repository = "https://github.com/fawni/rot13.rs"

[lib]
name = "rot13"
path = "src/lib.rs"

[[bin]]
name = "rot13"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1